--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body {
     margin-top: 0px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10px;
     background-color: chartreuse;
     background-image: url('images/pattern.png');
 }
@@ -48,6 +47,12 @@ nav {
 
 .main img {
     width: 300px;
+}
+
+.main figure {
+    border: 5px solid purple;
+    padding: 2rem;
+    margin:5px 30px 5px 0px;
 }
 
 footer {
